tests/snapshots/examples_fixtures/basics__higher_order_builtins.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/higher_order_builtins.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: Flux IR lowering fallback

unsupported infix operator

  examples/basics/higher_order_builtins.flx:90:29
   |
90 |     print(count(nums, /x -> x % 2 == 0))
   |                             ^^^^^
== stdout ==
<not executed>
