tests/snapshots/examples_fixtures/basics__math_builtins.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/math_base_functions.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
