tests/snapshots/examples_fixtures/basics__modulo.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/modulo.flx
== compile ==
failed (compile)
== diagnostics ==
Warning: Flux IR lowering fallback

unsupported infix operator

  examples/basics/modulo.flx:15:11
   |
15 |     print(10 % 3);
   |           ^^^^^^
== stdout ==
<not executed>
